scss/core/_reboot.scss
// stylelint-disable declaration-no-important, selector-no-qualifying-type, property-no-vendor-prefix

// Reboot
//
// Normalization of HTML elements, manually forked from Normalize.css and
// Bootstrap's Reboot to remove styles targeting irrelevant browsers while
// applying new styles.

// Normalize is licensed MIT. https://github.com/necolas/normalize.css
// Bootstrap is licensed MIT. https://github.com/twbs/bootstrap


// Document
// Change from `box-sizing: content-box` so that `width` is not affected by `padding` or `border`.
*,
*::before,
*::after {
    box-sizing: border-box;
}

// Shim for "new" HTML5 structural elements to display correctly (IE10, older browsers)
article,
aside,
dialog,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section {
    display: block;
}

// Root
//
// 1. Ability to the value of the root font sizes, affecting the value of `rem`.
//    null by default, thus nothing is generated.
:root {
    // stylelint-disable-next-line property-blacklist
    font-size: $font-size-root; // 1
}

// Body
//
// 1. Remove the margin in all browsers.
// 2. As a best practice, apply a default `background-color`.
// 3. Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.
// 4. Change the default tap highlight to be completely transparent in iOS.
body {
    margin: 0; // 1
    font-family: $font-family-base;
    @include font-size($font-size-base);
    font-weight: $font-weight-base;
    line-height: $line-height-base;
    color: $body-color;
    text-align: $body-text-align;
    background-color: $body-bg; // 2
    -webkit-text-size-adjust: 100%; // 3
    -webkit-tap-highlight-color: rgba($black, 0); // 4
}

// Future-proof rule: in browsers that support :focus-visible, suppress the focus outline
// on elements that programmatically receive focus but wouldn't normally show a visible
// focus outline. In general, this would mean that the outline is only applied if the
// interaction that led to the element receiving programmatic focus was a keyboard interaction,
// or the browser has somehow determined that the user is primarily a keyboard user and/or
// wants focus outlines to always be presented.
//
// See https://developer.mozilla.org/en-US/docs/Web/CSS/:focus-visible
// and https://developer.paciellogroup.com/blog/2018/03/focus-visible-and-backwards-compatibility/
[tabindex="-1"]:focus:not(:focus-visible) {
    outline: none !important;
}


// Content grouping
//
// 1. Reset Firefox's gray color
// 2. Set correct height and prevent the `size` attribute to make the `hr` look like an input field
//    See https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_hr_size
hr {
    margin: $hr-margin-y 0;
    color: $hr-color; // 1
    background-color: currentColor;
    border: 0;
    opacity: $hr-opacity;
}

hr:not([size]) {
    height: $hr-height; // 2
}


// Typography

// Remove top margins from headings
//
// By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
// margin for easier control within type scales as it avoids margin collapsing.
%heading {
    margin-top: 0;
    margin-bottom: $headings-margin-bottom;
    font-family: $headings-font-family;
    font-style: $headings-font-style;
    font-weight: $headings-font-weight;
    line-height: $headings-line-height;
    color: $headings-color;
}

h1 {
    @extend %heading;
    @include font-size($h1-font-size);
}

h2 {
    @extend %heading;
    @include font-size($h2-font-size);
}

h3 {
    @extend %heading;
    @include font-size($h3-font-size);
}

h4 {
    @extend %heading;
    @include font-size($h4-font-size);
}

h5 {
    @extend %heading;
    @include font-size($h5-font-size);
}

h6 {
    @extend %heading;
    @include font-size($h6-font-size);
}


// Reset margins on paragraphs
//
// Similarly, the top margin on `<p>`s get reset. However, we also reset the
// bottom margin to use `rem` units instead of `em`.
p {
    margin-top: 0;
    margin-bottom: $paragraph-spacer-y;
}


// Abbreviations
//
// 1. Duplicate behavior to the data-* attribute for our tooltip and popover widgets.
// 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
// 3. Add explicit cursor to indicate changed behavior.
// 4. Prevent the text-decoration to be skipped.
// stylelint-disable declaration-block-no-duplicate-properties
abbr[title],
abbr[data-cfw-tooltip-original-title],  // 1
abbr[data-cfw-popover-original-title] { // 1
    text-decoration: underline; // 2
    text-decoration: underline dotted; // 2
    cursor: help; // 3
    text-decoration-skip-ink: none; // 4
}
// stylelint-enable declaration-block-no-duplicate-properties

address {
    margin-bottom: 1rem;
    font-style: normal;
    line-height: inherit;
}

ol,
ul,
dl {
    margin-top: 0;
    margin-bottom: 1rem;
}

ol ol,
ul ul,
ol ul,
ul ol {
    margin-bottom: 0;
}

dt {
    font-weight: $dt-font-weight;
}

dd {
    margin-bottom: .5rem;
    margin-left: 0; // Undo browser default
}

blockquote {
    margin: 0 0 1rem;
}

b,
strong {
    font-weight: bolder; // Add the correct font weight in Chrome, Edge, and Safari
}

small {
    @include font-size($small-font-size); // Add the correct font size in all browsers
}

mark {
    padding: $mark-padding;
    background-color: $mark-bg;
}

// Prevent `sub` and `sup` elements from affecting the line height in
// all browsers.
sub,
sup {
    position: relative;
    @include font-size($sub-sup-font-size);
    line-height: 0;
    vertical-align: baseline;
}

sub {
    bottom: -.25em;
}
sup {
    top: -.5em;
}

// Links
a {
    color: $link-color;
    text-decoration: $link-decoration;

    @include hover() {
        color: $link-hover-color;
        text-decoration: $link-hover-decoration;
    }
}

// Undo these styles for placeholder links/named anchors (without href).
// It would be more straightforward to just use a[href] in previous block, but that
// causes specificity issues in many other styles that are too complex to fix.
a:not([href]) {
    color: inherit;
    text-decoration: none;

    &,
    &:hover {
        color: inherit;
        text-decoration: none;
    }
}


// Code
pre,
code,
kbd,
samp {
    font-family: $font-family-monospace;
    @include font-size(1em); // Correct the odd `em` font sizing in all browsers.
}

pre {
    margin-top: 0; // Remove browser default top margin
    margin-bottom: 1rem; // Reset browser default of `1em` to use `rem`s
    overflow: auto; // Don't allow content to break outside
}


// Figures
figure {
    margin: 0 0 1rem; // Apply a consistent margin strategy (matches our type styles).
}


// Images
img {
    vertical-align: middle;
}

svg {
    overflow: hidden; // Hide the overflow in IE
    vertical-align: middle;
}

// Tables
table {
    border-collapse: collapse; // Prevent double borders
}

caption {
    padding-top: $table-cell-padding;
    padding-bottom: $table-cell-padding;
    color: $table-caption-color;
    text-align: left;
    caption-side: bottom;
}

th {
    // Matches default `<td>` alignment by inheriting from the `<body>`, or the
    // closest parent with a set `text-align`.
    text-align: inherit;
}


// Forms
label {
    display: inline-block;
    margin-bottom: $label-margin-bottom; // Allow labels to use `margin` for spacing.
}

// Remove the default `border-radius` that macOS Chrome adds.
// Details at https://github.com/twbs/bootstrap/issues/24093
button {
    // stylelint-disable-next-line property-blacklist
    border-radius: 0;
}

// Work around a Firefox/IE bug where the transparent `button` background
// results in a loss of the default `button` focus styles.
//
// Credit: https://github.com/suitcss/base/
// stylelint-disable declaration-block-no-duplicate-properties
button:focus {
    outline: 1px dotted;
    outline: 5px auto -webkit-focus-ring-color;
}
// stylelint-enable declaration-block-no-duplicate-properties

input,
button,
select,
optgroup,
textarea {
    margin: 0; // Remove the margin in Firefox and Safari
    font-family: inherit;
    @include font-size(inherit);
    line-height: inherit;
}

button,
input {
    overflow: visible; // Show the overflow in Edge
}

button,
select {
    text-transform: none; // Remove the inheritance of text transform in Firefox
}

// Remove the inheritance of word-wrap in Safari.
//
// Details at https://github.com/twbs/bootstrap/issues/24990
select {
    word-wrap: normal;
}

// 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
//    controls in Android 4.
// 2. Correct the inability to style clickable types in iOS and Safari.
button,
[type="button"], // 1
[type="reset"],
[type="submit"] {
    -webkit-appearance: button; // 2
}

// Remove inner border and padding from Firefox, but don't restore the outline like Normalize.
::-moz-focus-inner {
    padding: 0;
    border-style: none;
}

input[type="radio"],
input[type="checkbox"] {
    box-sizing: border-box; // 1. Add the correct box sizing in IE 10-
    padding: 0; // 2. Remove the padding in IE 10-
}

// Remove the default appearance of temporal inputs to avoid a Mobile Safari
// bug where setting a custom line-height prevents text from being vertically
// centered within the input.
// See https://bugs.webkit.org/show_bug.cgi?id=139848
// and https://github.com/twbs/bootstrap/issues/11266
input[type="date"],
input[type="time"],
input[type="datetime-local"],
input[type="month"] {
    -webkit-appearance: textfield;
}

textarea {
    overflow: auto; // Remove the default vertical scrollbar in IE.
    // Textareas should really only resize vertically so they don't break their (horizontal) containers.
    resize: vertical;
}

fieldset {
    // Browsers set a default `min-width: min-content;` on fieldsets,
    // unlike e.g. `<div>`s, which have `min-width: 0;` by default.
    // So we reset that to ensure fieldsets behave more like a standard block element.
    // See https://html.spec.whatwg.org/multipage/#the-fieldset-and-legend-elements
    min-width: 0;
    // Reset the default outline behavior of fieldsets so they don't affect page layout.
    padding: 0;
    margin: 0;
    border: 0;
}

// 1. Correct the text wrapping in Edge and IE.
// 2. Correct the color inheritance from `fieldset` elements in IE.
legend {
    display: block; // 1
    width: 100%;
    max-width: 100%; // 1
    padding: 0;
    margin-bottom: $legend-margin-bottom;
    @include font-size($legend-font-size);
    font-weight: $legend-font-weight;
    line-height: inherit;
    color: inherit; // 2
    white-space: normal; // 1
}

progress {
    vertical-align: baseline; // Add the correct vertical alignment in Chrome, Firefox, and Opera.
}

// Fix height of inputs with a type of datetime-local, date, month, week, or time
::-webkit-datetime-edit {
    overflow: visible;
    line-height: 0;
}

[type="search"] {
    // This overrides the extra rounded corners on search inputs in iOS so that our
    // `.form-control` class can properly style them. Note that this cannot simply
    // be added to `.form-control` as it's not specific enough. For details, see
    outline-offset: -2px; // 2. Correct the outline style in Safari.
    -webkit-appearance: textfield;
}

// Remove the inner padding in Chrome and Safari on macOS.
::-webkit-search-decoration {
    -webkit-appearance: none;
}

// 1. Change font properties to `inherit` in Safari.
// 2. Correct the inability to style clickable types in iOS and Safari.
::-webkit-file-upload-button {
    font: inherit; // 1
    -webkit-appearance: button; // 2
}

// Correct element displays
output {
    display: inline-block;
}

summary {
    display: list-item; // Add the correct display in all browsers
    cursor: pointer;
}

template {
    display: none; // Add the correct display in IE
}

// Always hide an element with the `hidden` HTML attribute (from PureCSS).
[hidden] {
    display: none !important;
}

